--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>Testing the github commands</h1>
+        <p>This is paragraph one<p>
+        <p>This is paragraph two</p>
     </body>
 </html>
